SimpleComplex/Utils 1.x, 2017-06-30
-----------------------------------
- .ini parser support string value replacers.

SimpleComplex/Utils 1.x, 2017-06-27
-----------------------------------
- Dependency injection container which also can refer external container.

SimpleComplex/Utils 1.x, 2017-06-24
-----------------------------------
- Fixed some options deficiencies.
- Support return value from CLI commands.
- Expose CLI commands of several packages, if exist.
- More decriptive error message when invalid cli option.

SimpleComplex/Utils 1.x, 2017-06-23
-----------------------------------
- Cli confirm() and pre-confirming --yes/-y.

SimpleComplex/Utils 1.x, 2017-06-22
-----------------------------------
- Cli command and execution support multiple providers.
- Fix screwed up argument mapping.
- Print help for providers as well as particular commands.

SimpleComplex/Utils 1.x, 2017-06-21
-----------------------------------
- Don't use 'iterable' type; effectively useless because stdClass is iterable
  but not 'iterable' (PHP still sucks type-wise).

SimpleComplex/Utils 1.x, 2017-06-18
-----------------------------------
- PathFileList class to list files in dirs simply and securely, avoiding
  extremely complicated and in-flexible N times *iterator procedures.

SimpleComplex/Utils 1.x, 2017-06-16
-----------------------------------
- Removed stuff that's either obsolete or naturally belonging to the config
  package.

SimpleComplex/Utils 1.x, 2017-06-14
-----------------------------------
- PSR-3 LogLevel converters.

SimpleComplex/Utils 1.x, 2017-06-13
-----------------------------------
- Custom .ini parser because PHP native doesn't support raw + typed scanning.

SimpleComplex/Utils 1.x, 2017-06-12
-----------------------------------
- EnvVarConfig class belongs to the config package, not this package.

SimpleComplex/Utils 1.x, 2017-06-11
-----------------------------------
- New class Utils, for helpers that to not deserve a class of their own.